--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,34 @@
 	</properties>
 	<dependencies>
 		<dependency>
+  			<groupId>com.h2database</groupId>
+  			<artifactId>h2</artifactId>
+		</dependency>
+		<dependency>
+    		<groupId>org.springframework.boot</groupId>
+    		<artifactId>spring-boot-starter-validation</artifactId>
+		</dependency>
+		<dependency>
+    		<groupId>javax.validation</groupId>
+    		<artifactId>validation-api</artifactId>
+		</dependency>
+		<dependency>
+  			<groupId>org.springframework.boot</groupId>
+  			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
+		<dependency>
+  			<groupId>org.thymeleaf.extras</groupId>
+  			<artifactId>thymeleaf-extras-springsecurity5</artifactId>
+		</dependency>
+		<dependency>
+  			<groupId>org.springframework.boot</groupId>
+  			<artifactId>spring-boot-starter-data-jpa</artifactId>
+		</dependency>
+		<dependency>
+  			<groupId>nz.net.ultraq.thymeleaf</groupId>
+  			<artifactId>thymeleaf-layout-dialect</artifactId>
+		</dependency>
+		<dependency>
   			<groupId>org.springframework.boot</groupId>
  			 <artifactId>spring-boot-starter-thymeleaf</artifactId>
 		</dependency>
@@ -64,6 +92,34 @@
 
 	<build>
 		<plugins>
+		<plugin>
+  			<groupId>nl.geodienstencentrum.maven</groupId>
+  			<artifactId>sass-maven-plugin</artifactId>
+  			<version>3.7.2</version>
+  			<executions>
+    			<execution>
+      			<id>compile</id>
+      			<phase>prepare-package</phase>
+      			<goals>
+        		<goal>update-stylesheets</goal>
+      			</goals>
+    		</execution>
+  			</executions>
+  		<configuration>
+    	<resources>
+      		<resource>
+        	<source>
+          <directory>${basedir}/src/main/resources/static/scss</directory>
+        	</source>
+        	<destination>${basedir}/src/main/resources/static/css</destination>
+      		</resource>
+    	</resources>
+    	<sassOptions>
+      		<cache>false</cache>
+      		<always_update>true</always_update>
+    	</sassOptions>
+  		</configuration>
+		</plugin>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
