--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,10 +1,13 @@
-
-
-
-
-
-
- servlet:
-   multipart:
-     max-file-size: 20MB
-     max-request-size: 20MB
+spring:
+  datasource:
+    driver-class-name: org.h2.Driver
+    url: jdbc:h2:mem:pictgram
+    username: sa
+    password:
+  h2:
+    console:
+      enabled: true  
+  servlet:
+    multipart:
+      max-file-size: 20MB
+      max-request-size: 20MB
